<resources>
    <string name="app_name">Nimhans</string>
    <string name="service_error">Something went wrong from service</string>
    <string name="string_text1">EPIDEMIOLOGICAL SURVEY OF AUTISM, ID AND COMMON MENTAL DISORDERS AMONG CHILDREN AND ADOLESCENTS IN UTTARAKHAND
</string>
    <string name="string_text2">Household Form</string>
    <string name="string_text3">State</string>
    <string name="string_text4">District</string>
    <string name="string_text5">Talk</string>
    <string name="string_text6">City/town/village</string>
    <string name="string_text7">Household Number</string>
    <string name="locale">Locale</string>
    <string name="string_text9">RURAL</string>
    <string name="string_text10">URBAN</string>
    <string name="string_text11">Name of the respondent</string>
    <string name="string_text12">Address with landmark</string>
    <string name="string_text13">Mobile Number</string>
    <string name="string_text14">Consented for study</string>
    <string name="string_text15">Date of interview</string>
    <string name="string_text16">DAY</string>
    <string name="string_text17">MONTH</string>
    <string name="string_text18">YEAR</string>
    <string name="string_text19">Result</string>
    <string name="string_text20">*RESULT CODES</string>
    <string name="string_text21">INTERVIEW COMPLETED</string>
    <string name="string_text22">INTERVIEW PARTIALLY COMPLETED</string>
    <string name="string_text23">RESPONDENT REFUSED TO TAKE PART</string>
    <string name="go_to_result">Go To Result</string>
    <string name="section5_intro">INTRODUCTION (PLEASE READ TO RESPONDENT)</string>
    <string name="section5_intro2">Thank you for agreeing to take part in this brief interview about alcohol, tobacco products and other drugs. I am going to ask you some questions about your experience of using these substances across your lifetime and in the past three months. These substances can be smoked, swallowed, snorted, inhaled, injected or taken in the form of pills (show drug card). Some of the substances listed may be prescribed by a doctor (like amphetamines, sedatives, pain medications). For this interview, we will not record medications that are used as prescribed by your doctor. However, if you have taken such medications for reasons other than prescription, or taken them more frequently or at higher doses than prescribed, please let me know. While we are also interested in knowing about your use of various illicit drugs, please be assured that information on such use will be treated as strictly confidential.</string>
    <string name="section5_intro1">NOTE: BEFORE ASKING QUESTIONS, GIVE ASSIST RESPONSE CARD TO PATIENT</string>
    <string name="section5_intro3">(if completing follow- up please cross check the patient’s answers with the answers given for Q1 at baseline. Any differences on this question should be queried)</string>
    <string name="section_EPIDEMIOLOGICAL_SURVEY">EPIDEMIOLOGICAL SURVEY OF AUTISM, ID AND COMMON MENTAL DISORDERS AMONG CHILDREN AND ADOLESCENTS IN UTTARAKHAND
</string>
    <string name="section_household_form">Section 1: Household Form</string>
    <string name="district">District</string>
    <string name="section_5_the_alcohol_smoking_and_substance_involvement_screening_test_assist">The Alcohol, Smoking and Substance Involvement Screening Test (ASSIST)</string>
    <string name="section_5_title">Section 5A (Interview only the child)</string>
    <string name="section_5b_title">Section 5B (Interview only the child)</string>
    <string name="section_5c_title">Section 5C (Interview only the child)</string>
    <string name="section_5d_title">Section 5D (Interview only the child)</string>
    <string name="section_5e_title">Section 5E (Interview only the child)</string>
    <string name="section_5f_title">Section 5F (Interview only the child)</string>
    <string name="section_5g_title">Section 5G (Interview only the child)</string>
    <string name="section_5h_title">Section 5H (Interview only the child)</string>
    <string name="section_5i_title">Section 5I (Interview only the child)</string>
    <string name="section_5j_title">Section 5J (Interview only the child)</string>
    <string name="section_5j_73_title">Section 5JA (Interview only the child)</string>
    <string name="create_user">Create User</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="view_users">View Users</string>
    <string name="reports">Reports</string>
    <string name="_525">525</string>
    <string name="edit_user">Edit User</string>
    <string name="update">Update</string>
    <string name="sign_in">Sign In</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="login">Login</string>
    <string name="section_1">Section 1</string>
    <string name="_1">1</string>
    <string name="uttarakhand">Uttarakhand</string>
    <string name="_2">2</string>
    <string name="dehradun">Dehradun</string>
    <string name="pauri_garhwal">Pauri Garhwal</string>
    <string name="almora">Almora</string>
    <string name="nainital">Nainital</string>
    <string name="_3">3</string>
    <string name="taluka">Taluka</string>
    <string name="select_taluka">Select Taluka</string>
    <string name="_4">4</string>
    <string name="city_town_village">City/Town/Village</string>
    <string name="_5">5</string>
    <string name="house_hold_number">House hold Number</string>
    <string name="_6">6</string>
    <string name="rural">Rural</string>
    <string name="urban">Urban</string>
    <string name="_7">7</string>
    <string name="name_of_the_respondent">Name of the Respondent</string>
    <string name="_8">8</string>
    <string name="address_with_landmark">Address with Landmark</string>
    <string name="_9">9</string>
    <string name="date_of_interview">Date Of Interview</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_11">11</string>
    <string name="consented_for_study">Consented for study :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_13">13</string>
    <string name="visit">Visit :</string>
    <string name="first_visit">First Visit</string>
    <string name="second_visit">Second Visit</string>
    <string name="third_visit">Third Visit</string>
    <string name="date_picker">Date Picker</string>
    <string name="_15">15</string>
    <string name="result_code">Result Code :</string>
    <string name="_1_interview_completed">1. Interview Completed</string>
    <string name="_2_interview_partially_completed_postponed">2. Interview Partially Completed/Postponed</string>
    <string name="_3_residents_of_household_refused_to_take_part">3. Residents of Household Refused to take part</string>
    <string name="_4_residents_of_household_not_available">4. Residents of Household not available</string>
    <string name="_5_residents_of_household_permanently_migrated">5. Residents of Household Permanently Migrated</string>
    <string name="_6_no_competent_respondent_at_home">6. No Competent Respondent at Home</string>
    <string name="_7_dwelling_vacant_not_a_dwelling_dwelling_destroyed">7. Dwelling Vacant/Not a Dwelling/Dwelling Destroyed</string>
    <string name="_8_other">8. Other</string>
    <string name="parent_interview_title">Parent interview form to be administered to one of the parents preferably mother. If both mother and father are not alive, only then the guardian or caretaker needs to be interviewed.</string>
    <string name="section_11_title">Anxiety and Depression (RCADS)</string>
    <string name="check_the_age_of_the_child_and_mark">Child age</string>
    <string name="interview_only_the_parents_guardian">INTERVIEW ONLY THE PARENTS/GUARDIAN</string>
    <string name="respondent">Respondent</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="guardian">Guardian</string>
    <string name="specify">Specify</string>
    <string name="my_child_worries_about_things">My child worries about things</string>
    <string name="never">Never</string>
    <string name="occasionally">Occasionally</string>
    <string name="often">Often</string>
    <string name="very_often">Very Often</string>
    <string name="my_child_feels_sad_or_empty">My child feels sad or empty</string>
    <string name="sometimes">Sometimes</string>
    <string name="always">Always</string>
    <string name="calculate_rcads_score">Calculate RCADS Score</string>
    <string name="monthly">Monthly</string>
    <string name="once_or_twice">Once or twice</string>
    <string name="weekly">Weekly</string>
    <string name="daily_or_almost_daily">Daily or almost daily</string>
    <string name="select_village">Select Village</string>
    <string name="add_member">Add Member</string>
    <string-array name="relation_ship_array">
        <item>Self</item>
        <item>Wife/Husband</item>
        <item>Son/Daughter</item>
        <item>Son-in-law/Daughter-in-law</item>
        <item>Grand Child</item>
        <item>Grand Parent</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Mother-in-law</item>
        <item>Father-in-law</item>
        <item>Brother/sister</item>
        <item>Brother-in-law/Sister-in-law</item>
        <item>Niece/Nephew</item>
        <item>Other relative</item>
        <item>Adopted/Foster child</item>
        <item>Not related</item>
    </string-array>
    <string-array name="occupation_array">
        <item>Cultivator</item>
        <item>Agricultural labourer</item>
        <item>Non-agricultural labourer</item>
        <item>Business</item>
        <item>Salaried employment</item>
        <item>Housework</item>
        <item>Student</item>
        <item>Not working/unemployed</item>
        <item>Other work</item>
    </string-array>
    <string-array name="education_array">
        <item>Illiterate</item>
        <item>Pre- Primary</item>
        <item>Primary</item>
        <item>Middle school</item>
        <item>High school</item>
        <item>Intermediate</item>
        <item>Degree/diploma</item>
        <item>Post-graduation and above</item>
    </string-array>
    <string-array name="role_array">
        <item>USER</item>
        <item>SUPERVISOR</item>
    </string-array>
    <string name="children_s_result">Children\'s Result</string>
    <string name="calculate">Calculate</string>
    <string name="did_not_seek_care_in_last_12_months">Did Not Seek Care In Last 12 Months</string>
    <string name="mental_health">Mental Health</string>
    <string name="heard_not_visited">Heard Not Visited</string>
    <string name="visited">Visited</string>
    <string name="public_buses">Public Buses</string>
    <string name="auto_rickshaw">Auto Rickshaw</string>
    <string name="train">Train</string>
    <string name="private_buses">Private Buses</string>
    <string name="taxis">Taxis</string>
    <string name="some_what_possible">Some What Possible</string>
    <string name="very_difficult">Very Difficult</string>
    <string name="not_possible">Not Possible</string>
    <string name="neither_heard_nor_visited">Neither Heard Nor Visited</string>
    <string name="at_least_once_a_month">At Least Once A Month</string>
    <string name="at_least_once_in_3_months">At Least Once In 3 Months</string>
    <string name="whenever_you_need_psycho_social_support">Whenever You Need Psycho-social Support</string>
    <string name="yes_in_the_past_3_months">Yes, in the past 3 months</string>
    <string name="yes_but_not_in_the_past_3_months">Yes, but not in the past 3 months</string>
</resources>